3.3-012
       - Issue #1322 - Add product name to VERSION file e.g. SpecTcl-
3.3-013
	- Issue #1451 - Re cast the Xamine shared memory region in terms of
          the types in stdint.h - this due to observation that 64bit 
          shared memory requirements were significantly larger than
          32 bit systems due to the use of architecture specific types.
       	- Issue #1328 - Remove SpecTcl's local instance of gri and require gri 
          be installed on systems using SpecTcl.  Note that lack of gri will
          result in  warning at configuration/install time.
        - Issue #1111 Add -rpaths in the case of links to shared libraries
          that are may not be in the normal places (e.g. provided by --with
          flags at build time).
        - Issue #1142 - Remove all dependencies on BLT as this package will
          likely become unavailable with Tcl 8.6 - which is now out of beta
          test.
        - Fixed various compile warnings in anticipation of compiler versions
          that will treat these as errors (finally solved the callbacks
          as data in Xt casting problem).
3.3-015
        * Fix error in griprint.cc - buffer overflow for printing spectra with
          numbers above 99.  Thanks to Dave Caussyn at FSU for finding this one.
        * Fix redef errors in NSCLAsciiFormatter..

3.4
        * Provide support code for NSCLDAQ-11/10 ring item decoding.
        * Issue # 1713, Issue# 1712 Support ringformat specification in
          all data source dialogs.  In addtion add the format selection
          to the bottom of data source prompters that did not originally
          have them.
        * Issue #1659 Provide mechanisms for ring buffer analyzers
          to fish data out of the event body header if it exists.
        * Issue #1658  Add ability for CRingBufferDecoder to autoselect
          the format helper if a ring format item is seen in the input data.