@@ -1020,3 +1020,6 @@ November 30-?? 2011
           to fish data out of the event body header if it exists.
         * Issue #1658  Add ability for CRingBufferDecoder to autoselect
           the format helper if a ring format item is seen in the input data.
+        * Issue #1633 Provide event processors with a post SpecTclRC.tcl
+          initialization hook.
+          
